--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
     "@types/papaparse": "^5.3.14",
+    "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "papaparse": "^5.4.1",
     "react": "^18",
